<resources>
    <string name="app_name">Instagram</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="fcm_channel_id">fcm_channel_id</string>
    <string name="fcm_channel_name">fcm_channel_name</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_app_id">1396752904301099</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="user_detail">User Detail</string>
    <string name="user_info">User Infomation</string>
    <string name="arrow_right">arrow_right</string>
    <string name="txt_log_in">Log in</string>
    <string name="txt_switch_accounts">Switch accounts</string>
    <string name="sign_up">Sign up.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login_with_facebook">Login with Facebook.</string>
    <string name="or">OR</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="instagram_ot_facebook">Instagram ot Facebook</string>

</resources>